<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/image_h_w_90"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/image_h_w_90"
        android:layout_height="@dimen/image_h_w_90"
        android:scaleType="centerCrop"
        android:contentDescription="@string/Artist_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_8">

        <TextView
            android:id="@+id/song"
            style="@style/text"
            android:text="@string/placeholder"
            android:textSize="@dimen/song_20" />

        <TextView
            android:id="@+id/artist"
            style="@style/text"
            android:text="@string/placeholder"
            android:textSize="@dimen/artist_15" />
    </LinearLayout>

    <ImageView
        android:id="@+id/stop"
        style="@style/control_buttons"
        android:src="@drawable/ic_stop"
        android:contentDescription="@string/stop_descreption"/>

    <ImageView
        android:id="@+id/play"
        style="@style/control_buttons"
        android:src="@drawable/ic_play_arrow"
        android:contentDescription="@string/play_descreption"/>

    <ImageView
        android:id="@+id/restart"
        style="@style/control_buttons"
        android:src="@drawable/ic_settings_backup_restore"
        android:contentDescription="@string/Restart_descreption"/>
</LinearLayout>