<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.muz.MainActivity">

    <FrameLayout
        style="@style/frame_layout"
        android:background="@color/fairouz_cat">
        <TextView
            android:id="@+id/fayrouz_text"
            style="@style/main_text"
            android:text="@string/fayrouz" />
    </FrameLayout>

    <FrameLayout
        style="@style/frame_layout"
        android:background="@color/adele_cat">
        <TextView
            android:id="@+id/adele_text"
            style="@style/main_text"
            android:text="@string/adele" />
    </FrameLayout>

    <FrameLayout
        style="@style/frame_layout"
        android:background="@color/relax_cat">
        <TextView
            android:id="@+id/relax_text"
            style="@style/main_text"
            android:text="@string/relaxing" />
    </FrameLayout>

</LinearLayout>
